--- a/public/owner-dashboard.html
+++ b/public/owner-dashboard.html
@@ -86,7 +86,7 @@
         .then((data) => {
           const machinesDiv = document.getElementById("machines");
           machinesDiv.innerHTML = data.length ? data.map((machine) => `
-            <div class="bg-white p-6 rounded-lg border-[0.5px] border-gray-200 hover:shadow-lg hover:shadow-[#2a431c]/50 transition duration-200 ">
+            <div class="bg-white p-6 rounded-lg border-[0.5px] border-gray-200 hover:shadow-lg hover:shadow-[#2a431c]/50 transition ease duration-200 ">
               <h3 class="text-xl font-semibold text-gray-800 mb-2">${machine.name.toLowerCase().replace(/(^\w|\s\w)/g, (m) => m.toUpperCase())}</h3>
               ${machine.images && machine.images.length > 0 ? `
                 <img src="${machine.images[0]}" alt="${machine.name}" class="w-full hover:scale-[1.03] h-48 object-cover rounded-md mb-4 transition ease duration-300">
@@ -121,55 +121,115 @@
         });
     }
 
-    function fetchBookings() {
-      fetch("https://machine-yard.vercel.app/api/bookings/owner", {
-        headers: { Authorization: `Bearer ${token}` },
-      })
-        .then((res) => {
-          if (!res.ok) {
-            return res.json().then((err) => {
-              throw new Error(err.error || 'Failed to fetch bookings');
-            });
-          }
-          return res.json();
-        })
-        .then((data) => {
-          const bookingsDiv = document.getElementById("bookings");
-          bookingsDiv.innerHTML = data.length ? data.map((booking) => `
-            <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-lg transition duration-200 border-[1px] border-gray-300">
-              <h3 class="text-lg font-semibold text-gray-800 mb-2">${booking.machine.name}</h3>
-              ${booking.machine.images && booking.machine.images.length > 0 ? `
-                <img src="${booking.machine.images[0]}" alt="${booking.machine.name}" class="w-full h-32 object-cover rounded-md mb-4">
-              ` : '<p class="text-gray-500 italic mb-4">No image available</p>'}
-              <p class="text-gray-600"><i class="fas fa-clock mr-2"></i>Hours: ${booking.hours}</p>
-              <p class="text-gray-600"><i class="fas fa-dollar-sign mr-2"></i>Total Cost: ${utils.formatCurrency(booking.totalCost)}</p>
-              <p class="text-gray-600"><i class="fas fa-calendar-alt mr-2"></i>Start: ${new Date(booking.startTime).toLocaleString()}</p>
-              <p class="text-gray-600"><i class="fas fa-calendar-check mr-2"></i>End: ${new Date(booking.endTime).toLocaleString()}</p>
-              <p class="text-gray-600"><i class="fas fa-info-circle mr-2"></i>Status: ${booking.ownerVerified}${booking.isCancelled ? " (Cancelled)" : ""}</p>
-              ${booking.ownerVerified === "pending" ? `
-                <div class="mt-4 flex gap-2">
-                  <button
-                    onclick="verifyBooking('${booking._id}', 'yes')"
-                    class="bg-green-600 text-white p-2 rounded-md hover:bg-green-700 transition duration-200 flex-1 flex items-center justify-center gap-2"
-                  >
-                    <i class="fas fa-check"></i> Approve
-                  </button>
-                  <button
-                    onclick="verifyBooking('${booking._id}', 'no')"
-                    class="bg-red-600 text-white p-2 rounded-md hover:bg-red-700 transition duration-200 flex-1 flex items-center justify-center gap-2"
-                  >
-                    <i class="fas fa-times"></i> Reject
-                  </button>
-                </div>
-              ` : ""}
-            </div>
-          `).join("") : '<p class="text-center text-gray-500 col-span-full">No booking requests found.</p>';
-        })
-        .catch((err) => {
-          console.error("Fetch bookings error:", err);
-          utils.showToast(`Error fetching bookings: ${err.message}`, "error");
+    async function getCustomerDetails(ownerId) {
+    try {
+        const response = await fetch(`http://localhost:5001/api/owners1/${ownerId}`, {
+            headers: { Authorization: `Bearer ${token}` },
         });
+
+        const textResponse = await response.text(); // Capture raw response for debugging
+        console.log("Raw API Response:", textResponse); // Debug log
+
+        if (!response.ok) {
+            throw new Error(`API Error: ${response.status} - ${response.statusText}`);
+        }
+
+        const data = JSON.parse(textResponse); // Manually parse response
+        console.log(data.owner)
+        return {
+            name: data.owner.name || "Unknown Customer",
+            email: data.email.email || "No Email Provided",
+        };
+    } catch (error) {
+        console.error("Error fetching customer details:", error);
+        utils.showToast(`Error: ${error.message}`, "error");
+        return { name: "Unknown Customer", email: "No Email Provided" };
     }
+}
+
+async function fetchBookings() {
+    try {
+        const response = await fetch("https://machine-yard.vercel.app/api/bookings/owner", {
+            headers: { Authorization: `Bearer ${token}` },
+        });
+
+        if (!response.ok) {
+            const errorData = await response.json();
+            throw new Error(errorData.error || "Failed to fetch bookings");
+        }
+
+        const data = await response.json();
+        console.log("API Response:", data); // Debugging
+
+        const bookingsWithCustomers = await Promise.all(
+            data.map(async (booking) => {
+                if (!booking.user) {
+                    console.warn("Booking missing user data:", booking);
+                    return { ...booking, name: "Unknown Customer", email: "No Email" };
+                }
+
+                const customerDetails = await getCustomerDetails(booking.user); // ✅ Corrected here
+                return { ...booking, ...customerDetails };
+            })
+        );
+
+        const bookingsDiv = document.getElementById("bookings");
+        bookingsDiv.innerHTML = bookingsWithCustomers.length
+            ? bookingsWithCustomers.map((booking) => `
+                <div class="bg-white p-6 rounded-lg hover:shadow-lg transition duration-200 border-[1px] border-gray-200 hover:shadow-lg hover:shadow-[#2a431c]/50 transition ease duration-200">
+                    <h3 class="text-lg font-semibold text-gray-800 mb-2">${booking.machine.name}</h3>
+                    ${booking.machine.images && booking.machine.images.length > 0 ? `
+                        <img src="${booking.machine.images[0]}" alt="${booking.machine.name}" class="w-full h-32 object-cover rounded-md mb-4">
+                    ` : '<p class="text-gray-500 italic mb-4">No image available</p>'}
+                    <p class="text-gray-600"><i class="fas fa-user mr-2"></i>Customer: ${booking.name}</p>
+                    <p class="text-gray-600"><i class="fas fa-envelope mr-2"></i>Email: ${booking.email}</p>
+                    <p class="text-gray-600"><i class="fas fa-clock mr-2"></i>Hours: ${booking.hours}</p>
+                    <p class="text-gray-600"><i class="fas fa-dollar-sign mr-2"></i>Total Cost: ${utils.formatCurrency(booking.totalCost)}</p>
+                    <p class="text-gray-600"><i class="fas fa-calendar-alt mr-2"></i>Start: ${new Date(booking.startTime).toLocaleString()}</p>
+                    <p class="text-gray-600"><i class="fas fa-calendar-check mr-2"></i>End: ${new Date(booking.endTime).toLocaleString()}</p>
+                    <p class="text-gray-600"><i class="fas fa-info-circle mr-2"></i>Status: ${booking.ownerVerified.toUpperCase()}${booking.isCancelled ? " (Cancelled)" : ""}</p>
+                    ${booking.ownerVerified === "pending" ? `
+                        <div class="mt-4 flex gap-2">
+                            <button onclick="verifyBooking('${booking._id}', 'yes')" class="bg-green-600 text-white p-2 rounded-md hover:bg-green-700 transition duration-200 flex-1 flex items-center justify-center gap-2">
+                                <i class="fas fa-check"></i> Approve
+                            </button>
+                            <button onclick="verifyBooking('${booking._id}', 'no')" class="bg-red-600 text-white p-2 rounded-md hover:bg-red-700 transition duration-200 flex-1 flex items-center justify-center gap-2">
+                                <i class="fas fa-times"></i> Reject
+                            </button>
+                        </div>
+                    ` : ""}
+                </div>
+            `).join("")
+            : '<p class="text-center text-gray-500 col-span-full">No booking requests found.</p>';
+    } catch (err) {
+        console.error("Fetch bookings error:", err);
+        utils.showToast(`Error fetching bookings: ${err.message}`, "error");
+    }
+}
+
+// Call function to fetch bookings
+// fetchBookings();
+
+
+// Function to fetch customer details based on user ID
+// async function getCustomerDetails(userId) {
+//     try {
+//         const response = await fetch(`http://localhost:5001/api/owners1/${userId}`, {
+//             headers: { Authorization: `Bearer ${token}` },
+//         });
+
+//         if (!response.ok) {
+//             const errorData = await response.json();
+//             throw new Error(errorData.error || "Failed to fetch customer details");
+//         }
+
+//         const data = await response.json();
+//         return { name: data.name || "Unknown", email: data.email || "No Email" };
+//     } catch (error) {
+//         console.error("Error fetching customer details:", error);
+//         return { name: "Unknown", email: "No Email" };
+//     }
+// }
 
     function deleteMachine(id) {
       fetch(`https://machine-yard.vercel.app/api/machines/${id}`, {
