--- a/public/user-booking.html
+++ b/public/user-booking.html
@@ -13,7 +13,7 @@
     <h1 id="title" class="text-4xl font-bold text-gray-800 mb-8 text-center">Book Machine</h1>
 
     <!-- Booking Form -->
-    <div id="booking-form" class="bg-white p-6 rounded-lg shadow-md max-w-md mx-auto"></div>
+    <div id="booking-form" class="bg-white p-6 rounded-lg shadow-md max-w-md mx-auto border-[1px] border-gray-200"></div>
   </div>
 
   <script src="/js/utils.js"></script>
@@ -43,27 +43,29 @@
               throw new Error(err.error || 'Failed to fetch machine details');
             });
           }
+          console.log(res)
           return res.json();
         })
         .then((machine) => {
           document.getElementById("title").textContent = `Book ${machine.name}`;
           document.getElementById("booking-form").innerHTML = `
-            <div class="space-y-6">
+            <div class="space-y-6 font-semibold">
               ${machine.images && machine.images.length > 0 ? `
-                <img src="${machine.images[0]}" alt="${machine.name}" class="w-full h-48 object-cover rounded-md shadow-sm">
+                <img src="${machine.images[0]}" alt="${machine.name}" class="w-full h-48 object-cover rounded-md shadow-sm hover:scale-[1.035] transition duration-500 ease">
               ` : '<p class="text-gray-500 italic text-center">No image available</p>'}
               <div class="text-gray-700">
-                <p><i class="fas fa-tools mr-2 text-blue-500"></i>Type: ${machine.type}</p>
-                <p><i class="fas fa-map-marker-alt mr-2 text-blue-500"></i>Location: ${machine.location}</p>
-                <p><i class="fas fa-dollar-sign mr-2 text-green-500"></i>Rate: ${utils.formatCurrency(machine.rentalFeePerHour)}/hr</p>
+                <p><i class="fas fa-tools mr-2 text-green-700 "></i>Type: ${machine.type.toLowerCase().replace(/(^\w|\s\w)/g, (m) => m.toUpperCase())}</p>
+                <p><i class="fas fa-map-marker-alt mr-[13px] text-green-700 "></i>Location: ${machine.location.toLowerCase().replace(/(^\w|\s\w)/g, (m) => m.toUpperCase())}</p>
+                <p><i class="fa-solid fa-indian-rupee-sign mr-[15px] text-green-700 "></i></i>Rate: ${utils.formatCurrency(machine.rentalFeePerHour)}/hr</p>
+                <p><i class="fa-solid fa-user-tie mr-[10px] text-green-700 "></i>Owner: ${machine.owner.name.toLowerCase().replace(/(^\w|\s\w)/g, (m) => m.toUpperCase())}</p>
               </div>
               <div>
                 <label for="startTime" class="block text-gray-700 font-medium mb-1"><i class="fas fa-calendar-alt mr-2"></i>Start Time</label>
                 <input
                   id="startTime"
                   type="datetime-local"
-                  class="w-full p-3 border border-gray-300 rounded-md focus:ring-2 focus:ring-green-500 focus:outline-none"
-                  min="${new Date().toISOString().slice(0, 16)}" <!-- Prevents past dates --
+                  class="w-full p-3 border border-gray-300 rounded-md focus:ring-2 focus:ring-green-800 focus:outline-none"
+                  min="${new Date().toISOString().slice(0, 16)}"
                 />
               </div>
               <div>
@@ -73,7 +75,7 @@
                   type="number"
                   min="1"
                   placeholder="Enter hours (e.g., 2)"
-                  class="w-full p-3 border border-gray-300 rounded-md focus:ring-2 focus:ring-green-500 focus:outline-none"
+                  class="w-full p-3 border border-gray-300 rounded-md focus:ring-2 focus:ring-green-800 focus:outline-none"
                 />
               </div>
               <button
