--- a/public/user-dashboard.html
+++ b/public/user-dashboard.html
@@ -66,16 +66,16 @@
     <style>
       @keyframes moveHorizon {
         0% {
-          transform: translateX(10vw);
+          transform: translateX(7vw);
         }
         50% {
-          transform: translateX(80vw);
+          transform: translateX(85vw);
         }
-        50.00001%{
-          transform: translateX(10vw);
+        50.00001% {
+          transform: translateX(7vw);
         }
         100% {
-          transform: translateX(80vw);
+          transform: translateX(85vw);
         }
       }
     </style>
@@ -83,7 +83,7 @@
     <div class="z-10 pointer-events-none overflow-hidden">
       <!-- Machine 1 (starts immediately) -->
       <div
-        class="absolute z-10 top-[82px] animate-[moveHorizon_35s_ease_infinite] opacity-30"
+        class="absolute z-10 top-[82px] animate-[moveHorizon_35s_ease_infinite] opacity-40"
       >
         <img src="construction-2027213.svg" alt="" class="w-32" />
       </div>
@@ -361,72 +361,100 @@
             utils.showToast(`Error fetching machines: ${err.message}`, "error");
           });
       }
+      async function getOwnerName(ownerId) {
+    try {
+        const response = await fetch(`https://machine-yard.vercel.app/api/owners1/${ownerId}`, {
+            headers: { Authorization: `Bearer ${token}` },
+        });
 
-      function fetchBookings() {
-        fetch("https://machine-yard.vercel.app/api/bookings/user", {
-          headers: { Authorization: `Bearer ${token}` },
-        })
-          .then((res) => {
-            if (!res.ok) {
-              return res.json().then((err) => {
-                throw new Error(err.error || "Failed to fetch bookings");
-              });
-            }
-            
-            return res.json();
-          })
-          .then((data) => {
-            const bookingsDiv = document.getElementById("bookings");
-            bookingsDiv.innerHTML = data.length
-              ? data
-                  .map(
-                    (booking) => `
-                        <div class="bg-white p-6 rounded-xl shadow-md card-hover">
-                            <h3 class="text-lg font-semibold text-gray-800 mb-3">${
-                              booking.machine.name
-                            }</h3>
-                            ${
-                              booking.machine.images &&
-                              booking.machine.images.length > 0
-                                ? `
-                                <img src="${booking.machine.images[0]}" alt="${booking.machine.name}" class="w-full h-32 object-cover rounded-lg mb-4">
-                            `
+        if (!response.ok) {
+            const errorData = await response.json();
+            throw new Error(errorData.error || "Failed to fetch owner name");
+        }
+
+        const data = await response.json();
+        return data.name || "Unknown Owner"; // ✅ Correctly return owner name
+    } catch (error) {
+        console.error("Error fetching owner name:", error);
+        utils.showToast(`Error: ${error.message}`, "error");
+        return "Unknown Owner";
+    }
+}
+
+async function fetchBookings() {
+    try {
+        const response = await fetch("https://machine-yard.vercel.app/api/bookings/user", {
+            headers: { Authorization: `Bearer ${token}` },
+        });
+
+        if (!response.ok) {
+            const errorData = await response.json();
+            throw new Error(errorData.error || "Failed to fetch bookings");
+        }
+
+        const bookings = await response.json();
+        console.log(bookings);
+
+        const bookingsDiv = document.getElementById("bookings");
+
+        if (bookings.length === 0) {
+            bookingsDiv.innerHTML = '<p class="text-center text-gray-500 col-span-full text-lg">You have no bookings yet.</p>';
+            return;
+        }
+
+        // 🔄 Fetch owner names in parallel for all bookings
+        const bookingsWithOwners = await Promise.all(
+            bookings.map(async (booking) => {
+                const ownerName = await getOwnerName(booking.machine.owner);
+                return { ...booking, ownerName };
+            })
+        );
+
+        // 🔥 Update UI with owner names
+        bookingsDiv.innerHTML = bookingsWithOwners
+            .map(
+                (booking) => `
+                    <div class="bg-white p-6 rounded-xl shadow-md card-hover">
+                        <h3 class="text-lg font-semibold text-gray-800 mb-3">${booking.machine.name}</h3>
+                        ${
+                            booking.machine.images && booking.machine.images.length > 0
+                                ? `<img src="${booking.machine.images[0]}" alt="${booking.machine.name}" class="w-full h-32 object-cover rounded-lg mb-4">`
                                 : '<p class="text-gray-500 italic mb-4">No image available</p>'
-                            }
-                            <p class="text-gray-600 text-sm mb-1"><i class="fas fa-clock mr-2 text-blue-500"></i>Hours: ${
-                              booking.hours
-                            }</p>
-                            <p class="text-gray-600 text-sm mb-1"><i class="fas fa-dollar-sign mr-2 text-green-500"></i>Total Cost: ${utils.formatCurrency(
-                              booking.totalCost
-                            )}</p>
-                            <p class="text-gray-600 text-sm mb-3"><i class="fas fa-info-circle mr-2 text-blue-500"></i>Status: ${
-                              booking.ownerVerified
-                            }${booking.isCancelled ? " (Cancelled)" : ""}</p>
-                            ${
-                              booking.ownerVerified === "yes" &&
-                              !booking.isCancelled
-                                ? `
-                                <button
+                        }
+                        <p class="text-gray-600 text-sm mb-1">
+                            <i class="fas fa-user mr-2 text-slate-700"></i>Machine Owner: <strong>${booking.ownerName}</strong>
+                        </p>
+                        <p class="text-gray-600 text-sm mb-1">
+                            <i class="fas fa-clock mr-2 text-slate-700"></i>Hours: ${booking.hours}
+                        </p>
+                        <p class="text-gray-600 text-sm mb-1">
+                            <i class="fas fa-calendar mr-2 text-slate-700"></i>Date & Time: ${booking.startTime}
+                        </p>
+                        <p class="text-gray-600 text-sm mb-1">
+                            <i class="fa-solid fa-indian-rupee-sign ml-[2px] mr-2 text-slate-700"></i>Total Cost: ${utils.formatCurrency(booking.totalCost)}
+                        </p>
+                        <p class="text-gray-600 text-sm mb-3">
+                            <i class="fas fa-info-circle mr-2 text-green-600"></i>Status: ${booking.ownerVerified.toUpperCase()}${booking.isCancelled ? " (Cancelled)" : ""}
+                        </p>
+                        ${
+                            !booking.isCancelled
+                                ? `<button
                                     onclick="cancelBooking('${booking._id}')"
                                     class="mt-4 w-full bg-red-600 text-white p-2 rounded-lg btn-hover flex items-center justify-center gap-2 text-sm font-medium"
                                 >
                                     <i class="fas fa-times"></i> Cancel Booking
-                                </button>
-                            `
+                                </button>`
                                 : ""
-                            }
-                        </div>
-                    `
-                  )
-                  .join("")
-              : '<p class="text-center text-gray-500 col-span-full text-lg">You have no bookings yet.</p>';
-          })
-          .catch((err) => {
-            console.error("Fetch bookings error:", err);
-            utils.showToast(`Error fetching bookings: ${err.message}`, "error");
-          });
-      }
-
+                        }
+                    </div>
+                `
+            )
+            .join("");
+    } catch (error) {
+        console.error("Fetch bookings error:", error);
+        utils.showToast(`Error fetching bookings: ${error.message}`, "error");
+    }
+}
       function cancelBooking(id) {
         fetch(`https://machine-yard.vercel.app/api/bookings/cancel/${id}`, {
           method: "PUT",
