--- a/public/user-dashboard.html
+++ b/public/user-dashboard.html
@@ -209,7 +209,7 @@
         };
 
         return `
-    <div class="bg-white p-6 rounded-2xl shadow-lg hover:shadow-xl transition-shadow duration-300 border border-gray-100 relative overflow-hidden group border">
+    <div class="bg-white p-6 rounded-2xl border-gray-200 hover:shadow-lg hover:shadow-[#2a431c]/50 transition ease duration-200 shadow-md relative overflow-hidden group border">
         <!-- Top Badge -->
         <div class="absolute top-0 right-0 ${
           typeColors[machine.type] || typeColors.default
@@ -226,7 +226,7 @@
                     src="${machine.images[0]}" 
                     alt="${machine.name}" 
                     loading="lazy"
-                    class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-105"
+                    class="w-full h-full object-cover transition-transform duration-300 group-hover:scale-95"
                 >
                 <div class="absolute inset-0 bg-black/10 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex items-center justify-center">
                 </div>
